# lib-ml

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  devPreRelease.yml  dockerRelease.yml  preRelease.yml  release.yml
scripts/: create-prerelease.sh
src/lib_ml/: __init__.py
src/lib_ml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_preprocessor.py
